--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -1,3 +1,5 @@
+<div class="saved">
+
 {{!-- Nav --}}
   <nav class="transparent">
     <div class="container">
@@ -5,8 +7,8 @@
         <a href="/" class="brand-logo black-text">MongoScrape</a>
         <a href="#" data-target="mobile-demo" class="black-text sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a class="black-text" href="/">Home</a></li>
-            <li><a class="black-text" href="/saved-articles">Saved Articles</a></li>
+            <li><a class="black-text nav-home" href="/">Home</a></li>
+            <li><a class="black-text nav-saved" href="/saved-articles">Saved Articles</a></li>
         </ul>
         </div>
     </div>
@@ -18,6 +20,7 @@
   </ul>
   {{!-- Nav --}}
 
+</div> {{!-- /Saved --}}
 
 
   <script src="/js/saved-articles.js"></script>
