--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,15 +24,33 @@
 
   <header>
     <div class="row">
-      <div class="bc-image">
+      <div class="bc-image center">
         <div class="col s12 center-align">
-          <div class="title">
+          <div class="title center">
             <h1>MongoScraper</h1>
+          </div>
+          <div class="title center">
+            <h5>Discuss articles collected from theVerge.com</h5>
           </div>
         </div>
       </div>
     </div>
   </header>
+
+  <div class="container">
+
+    <div class="row article-main valign-wrapper">
+      <div class="col s10 article">
+        <img class="article image" src="https://placeimg.com/150/150/tech">
+        <h2 class="article headline"> This is will the article headline will go.</h2>
+      </div>
+
+      <div class="col s2 article-btn center-align">
+        <button class=" btn waves-effect waves-light btn-large saved-false">Save</button>
+      </div>
+    </div>
+
+  </div> {{!-- /Container --}}
 
 </div> {{!-- /Index --}}
 
