--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,14 +10,16 @@ body {
 
 .index .bc-image {
     background-image: url("../images/verge_wp.png");
-    height: 300px;
-    width: 100%;
+    z-index: -1;
+    height: 400px;
 }
 
 .index .title {
     text-align: center;
-    background-color: white;
-    width: 400px;
+    background-color: black;
+    color: white;
+    width: 100%;
+    margin: 10px 0 10px 0;
 }
 
 .index .article-main {
