--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,15 +24,21 @@
 
   <header>
     <div class="row">
-      <div class="bc-image center">
-        <div class="col s12 center-align">
-          <div class="title center">
+      {{!-- <div class="bc-image center"> --}}
+        <div class="col s12 bc-image center-align">
+          <div class="title">
             <h1>MongoScraper</h1>
           </div>
           <div class="title center">
             <h5>Discuss articles collected from theVerge.com</h5>
           </div>
         </div>
+      {{!-- </div> --}}
+    </div>
+
+    <div class="row">
+      <div class="col s12 center-align">
+        <button class="btn-large btn waves-effect waves-light black">Scrape Articles</button>
       </div>
     </div>
   </header>
