created mongoose models

--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -1,7 +1,7 @@
 <div class="saved">
 
 {{!-- Nav --}}
-  <nav class="transparent">
+  <nav class="white">
     <div class="container">
         <div class="nav-wrapper">
         <a href="/" class="brand-logo black-text">MongoScrape</a>
