--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,9 @@
 <div class="index">
   {{!-- Nav --}}
-  <div class="navbar-fixed">
-    <nav class="white">
+    <nav class="white navbar-fixed">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo black-text">MongoScrape</a>
+          <a href="/" class="brand-logo black-text">TheSurge</a>
           <a href="#" data-target="mobile-demo" class="black-text sidenav-trigger"><i
               class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
@@ -19,15 +18,14 @@
       <li><a href="/">Home</a></li>
       <li><a href="/saved-articles">Saved Articles</a></li>
     </ul>
-  </div>
   {{!-- Nav --}}
 
   <header>
     <div class="row">
       {{!-- <div class="bc-image center"> --}}
-        <div class="col s12 bc-image center-align">
+        <div class="col s12 bc-image  center-align">
           <div class="title">
-            <h1>MongoScraper</h1>
+            <h1>The Surge</h1>
           </div>
           <div class="title center">
             <h5>Discuss articles collected from theVerge.com</h5>
@@ -38,7 +36,7 @@
 
     <div class="row">
       <div class="col s12 center-align">
-        <button class="btn-large btn waves-effect waves-light black">Scrape Articles</button>
+        <button class="btn-large btn waves-effect waves-light deep-orange accent-4">Scrape Articles</button>
       </div>
     </div>
   </header>
@@ -50,10 +48,10 @@
         <img class="article image" src="https://placeimg.com/150/150/tech">
         <h2 class="article headline"> This is will the article headline will go.</h2>
       </div>
-
+{{!-- 
       <div class="col s2 article-btn center-align">
         <button class=" btn waves-effect waves-light btn-large saved-false">Save</button>
-      </div>
+      </div> --}}
     </div>
 
   </div> {{!-- /Container --}}
