--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,10 @@
 <div class="index">
   {{!-- Nav --}}
-    <nav class="white navbar-fixed">
+  <div class="navbar-fixed">
+    <nav class="white">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo black-text">TheSurge</a>
+          <a href="/" class="brand-logo black-text"><img class="logo" src="./images/surge_logo.png"></a>
           <a href="#" data-target="mobile-demo" class="black-text sidenav-trigger"><i
               class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
@@ -13,48 +14,62 @@
         </div>
       </div>
     </nav>
+  </div>
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="/">Home</a></li>
+    <li><a href="/saved-articles">Saved Articles</a></li>
+  </ul>
 
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="/">Home</a></li>
-      <li><a href="/saved-articles">Saved Articles</a></li>
-    </ul>
   {{!-- Nav --}}
 
   <header>
     <div class="row">
-      {{!-- <div class="bc-image center"> --}}
-        <div class="col s12 bc-image  center-align">
-          <div class="title">
-            <h1>The Surge</h1>
-          </div>
-          <div class="title center">
-            <h5>Discuss articles collected from theVerge.com</h5>
-          </div>
+      <div class="col s12 bc-image  center-align">
+        <div class="title">
+          <h1>The Surge</h1>
         </div>
-      {{!-- </div> --}}
+        <div class="title center">
+          <h6>Discuss articles collected from theVerge.com</h6>
+        </div>
+      </div>
     </div>
 
     <div class="row">
       <div class="col s12 center-align">
-        <button class="btn-large btn waves-effect waves-light deep-orange accent-4">Scrape Articles</button>
+        <button class="btn-large btn waves-effect waves-light pink">Scrape Articles</button>
       </div>
     </div>
   </header>
 
+
   <div class="container">
 
-    <div class="row article-main valign-wrapper">
-      <div class="col s10 article">
-        <img class="article image" src="https://placeimg.com/150/150/tech">
-        <h2 class="article headline"> This is will the article headline will go.</h2>
-      </div>
-{{!-- 
-      <div class="col s2 article-btn center-align">
-        <button class=" btn waves-effect waves-light btn-large saved-false">Save</button>
-      </div> --}}
-    </div>
+    {{#each Article}}
+
+      {{#unless saved}}
+
+        <div class="row article-main center-align">
+
+          <div class="col s12 m3">
+            <img class="article image" src="{{image}}">
+          </div>
+
+          <div class="col s12 m7 article">
+            <a class="link" href="{{link}}" target="_blank"><h5 class="article headline">{{headline}}</h5></a>
+          </div>
+
+          <div class="col s12 m2 article-btn center-align vertical-align">
+            <button class="btn waves-effect waves-light saved-false pink" data-id="{{this._id}}">Save</button>
+          </div>
+
+        </div>
+
+      {{/unless}}
+
+    {{/each}}
 
   </div> {{!-- /Container --}}
+
 
 </div> {{!-- /Index --}}
 
