--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -1,26 +1,71 @@
 <div class="saved">
-
-{{!-- Nav --}}
-  <nav class="white">
-    <div class="container">
+  {{!-- Nav --}}
+  <div class="navbar-fixed">
+    <nav class="white">
+      <div class="container">
         <div class="nav-wrapper">
-        <a href="/" class="brand-logo black-text">MongoScrape</a>
-        <a href="#" data-target="mobile-demo" class="black-text sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
+          <a href="/" class="brand-logo black-text"><img class="logo" src="./images/surge_logo.png"></a>
+          <a href="#" data-target="mobile-demo" class="black-text sidenav-trigger"><i
+              class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
             <li><a class="black-text nav-home" href="/">Home</a></li>
             <li><a class="black-text nav-saved" href="/saved-articles">Saved Articles</a></li>
-        </ul>
+          </ul>
         </div>
-    </div>
-  </nav>
-
+      </div>
+    </nav>
+  </div>
   <ul class="sidenav" id="mobile-demo">
     <li><a href="/">Home</a></li>
     <li><a href="/saved-articles">Saved Articles</a></li>
   </ul>
+
   {{!-- Nav --}}
 
-</div> {{!-- /Saved --}}
+  <header>
+    <div class="row">
+      <div class="col s12 bc-image  center-align">
+        <div class="title">
+          <h1>The Surge</h1>
+        </div>
+        <div class="title center">
+          <h6>Discuss articles collected from theVerge.com</h6>
+        </div>
+      </div>
+    </div>
+  </header>
 
 
-  <script src="/js/saved-articles.js"></script>
+  <div class="container">
+
+    {{#each Article}}
+
+      {{#if saved}}
+
+        <div class="row article-main center-align">
+
+          <div class="col s12 m3">
+            <img class="article image" src="{{image}}">
+          </div>
+
+          <div class="col s12 m7 article">
+            <a class="link" href="{{link}}" target="_blank"><h5 class="article headline">{{headline}}</h5></a>
+          </div>
+
+          <div class="col s12 m2 article-btn center-align vertical-align">
+            <button class="btn waves-effect waves-light saved-false pink" data-id="{{this._id}}">Remove</button>
+          </div>
+
+        </div>
+
+      {{/if}}
+
+    {{/each}}
+
+  </div> {{!-- /Container --}}
+
+
+</div> {{!-- /Index --}}
+
+
+<script src="/js/index.js"></script>
