--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/saved-articles.css">
     <link rel="icon" href="/images/favicon.ico">
     {{!-- JQUERY --}}
-    <script src="http://code.jquery.com/jquery-3.3.1.slim.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
