--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,8 +5,7 @@
       <div class="container">
         <div class="nav-wrapper">
           <a href="/" class="brand-logo black-text"><img class="logo" src="./images/surge_logo.png"></a>
-          <a href="#" data-target="mobile-demo" class="black-text sidenav-trigger"><i
-              class="material-icons">menu</i></a>
+          <a href="" data-target="mobile-demo" class="black-text sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a class="black-text nav-home" href="/">Home</a></li>
             <li><a class="black-text nav-saved" href="/saved-articles">Saved Articles</a></li>
@@ -34,40 +33,49 @@
       </div>
     </div>
 
+    {{!-- Button to Scrape --}}
     <div class="row">
       <div class="col s12 center-align">
-        <button class="btn-large btn waves-effect waves-light pink">Scrape Articles</button>
+        <button class="scrape btn-large btn waves-effect waves-light pink">Scrape Articles</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 center-align">
+        <button class="clear-all btn waves-effect waves-light pink">Clear All</button>
       </div>
     </div>
   </header>
 
 
   <div class="container">
-
-    {{#each Article}}
+    <div id="articles">
+      {{#each Article}}
 
       {{#unless saved}}
 
-        <div class="row article-main center-align">
+      <div class="row article-main center-align">
 
-          <div class="col s12 m3">
-            <img class="article image" src="{{image}}">
-          </div>
-
-          <div class="col s12 m7 article">
-            <a class="link" href="{{link}}" target="_blank"><h5 class="article headline">{{headline}}</h5></a>
-          </div>
-
-          <div class="col s12 m2 article-btn center-align vertical-align">
-            <button class="btn waves-effect waves-light saved-false pink" data-id="{{this._id}}">Save</button>
-          </div>
-
+        <div class="col s12 m3">
+          <img class="article image" src="{{image}}">
         </div>
+
+        <div class="col s12 m7 article">
+          <a class="link" href="{{link}}" target="_blank">
+            <h5 class="article headline">{{headline}}</h5>
+          </a>
+        </div>
+
+        <div class="col s12 m2 article-btn center-align vertical-align">
+          <button type="submit" class="btn waves-effect waves-light saved-false pink" id="save"
+            data-id="{{this._id}}">Save</button>
+        </div>
+
+      </div>
 
       {{/unless}}
 
-    {{/each}}
-
+      {{/each}}
+    </div>
   </div> {{!-- /Container --}}
 
 
