--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mongo Scraper</title>
     {{!-- Google Fonts --}}
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Bowlby+One+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Alfa+Slab+One" rel="stylesheet">
     {{!-- Materialize --}}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     {{!-- Materialize Icons --}}
