--- a/public/css/saved-articles.css
+++ b/public/css/saved-articles.css
@@ -1,16 +1,10 @@
 body {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-image: linear-gradient(to right, rgb(247, 198,38) , rgb(229, 18, 125));
 }
 
-/* INDEX */
-.saved .nav-home {
-    text-decoration: underline solid black;
-    font-size: 20px;
-}
-
-.saved .nav-saved {
-    font-size: 20px;
+.sidenav {
+    background-color: black;
 }
 
 .saved .logo {
@@ -21,12 +15,12 @@ body {
     background-image: url("../images/verge_wp.jpg");
     /* background-position: right; */
     z-index: -1;
-    height: 100%;;
+    
     width: 100%;
 }
 
 .saved .title h1 {
-    font-family: 'Bowlby One SC', cursive;
+    font-family: 'Alfa Slab One', cursive;
     text-align: center;
     /* background-color: black; */
     color: rgb(255, 255, 255);
@@ -35,7 +29,7 @@ body {
 }
 
 .saved .title h6 {
-    font-family: 'Bowlby One SC', cursive;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     /* background-color: black; */
     color: rgb(255, 255, 255);
@@ -60,24 +54,20 @@ body {
     color: white;
 }
 
-.saved .article-btn {
-    width: 100%;
-    margin-top: 5%;    
+.saved .saved-true {
+    width: 90px;
+    margin-top: 13%;    
 }
 
 .saved .link h5:hover {
     color: rgb(229, 15, 101);
 }
-/* INDEX */
 
-
-/* SAVED */
 .saved .nav-saved {
     text-decoration: underline solid black;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .saved .nav-home {
-    font-size: 20px
+    font-size: 15px
 }
-/* SAVED */
