renamed body to text in Comment model. add more get routes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
       </div>
     </nav>
   </div>
-  <ul class="sidenav" id="mobile-demo">
+  <ul class="sidenav pink" id="mobile-demo">
     <li><a class="white-text" href="/">Home</a></li>
     <li><a class="white-text" href="/saved-articles">Saved Articles</a></li>
   </ul>
