--- a/public/css/saved-articles.css
+++ b/public/css/saved-articles.css
@@ -3,10 +3,6 @@ body {
     background-image: linear-gradient(to right, rgb(247, 198,38) , rgb(229, 18, 125));
 }
 
-.sidenav {
-    background-color: black;
-}
-
 .saved .logo {
     height: 50px;
 }
@@ -71,3 +67,29 @@ body {
 .saved .nav-home {
     font-size: 15px
 }
+
+.comments hr {
+    border-color: #e91e63;
+}
+
+.input-field label {
+    color: #000;
+}
+
+.input-field input[type=text]:focus + label {
+    color: #e91e63 !important;
+}
+
+.input-field input[type=text]:focus {
+    border-bottom: 1px solid #e91e63 !important;
+    box-shadow: 0 1px 0 0 #e91e63 !important;
+}
+
+.input-field textarea:focus + label {
+    color: #e91e63 !important;
+}
+.input-field textarea:focus {
+    border-bottom: 1px solid #e91e63 !important;
+    box-shadow: 0 1px 0 0 #e91e63 !important;
+}
+
