--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -14,7 +14,7 @@
       </div>
     </nav>
   </div>
-  <ul class="sidenav" id="mobile-demo">
+  <ul class="sidenav pink" id="mobile-demo">
     <li><a class="white-text" href="/">Home</a></li>
     <li><a class="white-text" href="/saved-articles">Saved Articles</a></li>
   </ul>
@@ -36,9 +36,7 @@
 
 
   <div class="container">
-
     {{#each Article}}
-
     {{#if saved}}
 
     <div class="row article-main center-align">
@@ -54,30 +52,52 @@
       </div>
 
       <div class="col s12 m2 article-btn center-align vertical-align">
-        <button type="submit" id="discuss" class="btn waves-effect waves-light saved-true pink modal-trigger"
+        <button type="submit" id="discuss" class="discuss btn waves-effect waves-light saved-true pink modal-trigger"
           data-target="modal1" data-id="{{this._id}}">Discuss</button>
         <button type="submit" id="remove" class="remove btn waves-effect waves-light saved-true pink"
           data-id="{{this._id}}">Remove</button>
       </div>
 
     </div>
-
     {{/if}}
-
     {{/each}}
-
 
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
+      <div class="container">
       <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
-      </div>
-      <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-      </div>
-    </div>
 
+        <div class="row">
+          <div class="col s12 comments">
+            {{!-- <h6>{{Comment.name}}</h6>
+            <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus sequi maiores error!</h6>
+            <hr> --}}
+          </div>
+        </div>
+
+      </div>
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="modal-name" type="text" class="validate" minlength="1" maxlength="20">
+                <label for="modal-name">Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <textarea id="modal-textarea" class="materialize-textarea validate" minlength="1" maxlength="280" data-length="280"></textarea>
+                <label for="modal-textarea">Textarea</label>
+              </div>
+            </div>
+            <div class="row">
+              <button class="btn waves-effect waves-light pink comment-submit" type="button">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+    </div>
 
   </div> {{!-- /Container --}}
 
