working comment section on saved-articles page

--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -69,9 +69,7 @@
 
         <div class="row">
           <div class="col s12 comments">
-            {{!-- <h6>{{Comment.name}}</h6>
-            <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus sequi maiores error!</h6>
-            <hr> --}}
+            {{!-- This is were comments will go --}}
           </div>
         </div>
 
