--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -66,12 +66,17 @@
     <div id="modal1" class="modal">
       <div class="container">
       <div class="modal-content">
-        <div>
-          <h4>{{Article.headline}}</h4>
+
+        <div class="comment-headline center-align">
+          <h5 class="comment-headline"></h5>
         </div>
-        <div class="row">
+
+
+        <div class="row comment-body">
+          <div class="col s12 comments-header">
+            <h5 class="center-align white-text">Comments</h5>
+          </div>
           <div class="col s12 comments">
-            {{!-- This is were comments will go --}}
           </div>
         </div>
 
