changed comment section styling and added comment counter

--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -67,14 +67,14 @@
       <div class="container">
       <div class="modal-content">
 
-        <div class="comment-headline center-align">
-          <h5 class="comment-headline"></h5>
+        <div class="comment-headline">
+          <h4 class="comment-headline"></h4>
         </div>
 
 
         <div class="row comment-body">
           <div class="col s12 comments-header">
-            <h5 class="center-align white-text">Comments</h5>
+            <h5 class="black-text">THERE ARE <span class="numOfComments"></span> COMMENTS.</h5>
           </div>
           <div class="col s12 comments">
           </div>
@@ -85,11 +85,11 @@
           <form class="col s12">
             <div class="row">
               <div class="input-field col s6">
-                <input id="modal-name" type="text" class="validate white-text" minlength="1" maxlength="20">
+                <input id="modal-name" type="text" class="validate black-text" maxlength="20">
                 <label for="modal-name">Name</label>
               </div>
               <div class="input-field col s12">
-                <textarea id="modal-textarea" class="materialize-textarea validate white-text" minlength="1" maxlength="280" data-length="280"></textarea>
+                <textarea id="modal-textarea" class="materialize-textarea validate black-text" maxlength="280" data-length="280"></textarea>
                 <label for="modal-textarea">Textarea</label>
               </div>
               <div class="input-field col s12 c-submit-div">
