--- a/public/css/saved-articles.css
+++ b/public/css/saved-articles.css
@@ -68,39 +68,37 @@ body {
     font-size: 15px
 }
 
-#modal1 {
-    background-image: linear-gradient(to right, rgb(247, 198,38) , rgb(229, 18, 125));
-}
+
 
 .comment-body {
     margin-bottom: 10px;
 }
 
 .comment-headline{
-    background-color: black;
     color: #e91e63;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
-.comments-header {
-    background-color: black;
+.comments-header h5 {
+    font-size: 20px;
 }
 
 .comments { 
-    background-color: black;
-    color: white;
+    color: black;
 }
+
 .eachComment h6{
     color: #e91e63;
     font-weight: bold;
+    font-size: 20px;
     margin-top: 14px;
     margin-bottom: 0;
 }
 
 .eachComment p{
-    margin-top: 0;
+    margin-top: 5px;
 }
 
 .comments hr {
@@ -108,7 +106,6 @@ body {
 }
 
 .comment-form {
-    background-color: black;
     padding-top:20px;
 }
 
@@ -159,7 +156,7 @@ body {
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #e91e63; 
+    background: #ffffff; 
   }
    
   /* Handle */
