comment validation fixed. some styling changes

--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -74,7 +74,7 @@
 
         <div class="row comment-body">
           <div class="col s12 comments-header">
-            <h5 class="black-text">THERE ARE <span class="numOfComments"></span> COMMENTS.</h5>
+            <h5 class="grey-text">THERE ARE <span class="numOfComments"></span> COMMENTS.</h5>
           </div>
           <div class="col s12 comments">
           </div>
@@ -85,12 +85,12 @@
           <form class="col s12">
             <div class="row">
               <div class="input-field col s6">
-                <input id="modal-name" type="text" class="validate black-text" maxlength="20">
+                <input id="modal-name" type="text" class="black-text modal-name" maxlength="20">
                 <label for="modal-name">Name</label>
               </div>
               <div class="input-field col s12">
-                <textarea id="modal-textarea" class="materialize-textarea validate black-text" maxlength="280" data-length="280"></textarea>
-                <label for="modal-textarea">Textarea</label>
+                <textarea id="modal-textarea" class="materialize-textarea black-text modal-textarea" maxlength="280" data-length="280"></textarea>
+                <label for="modal-textarea">Comment</label>
               </div>
               <div class="input-field col s12 c-submit-div">
               <button class="btn waves-effect waves-light pink comment-submit" type="button">Submit</button>
@@ -98,8 +98,8 @@
             </div>
           </form>
         </div>
+        
       </div>
-
     </div>
 
   </div> {{!-- /Container --}}
