--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -1,14 +1,14 @@
 <div class="saved">
   {{!-- Nav --}}
   <div class="navbar-fixed">
-    <nav class="white">
+    <nav class="black">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="/saved-articles" class="brand-logo black-text"><img class="logo" src="./images/surge_logo.png"></a>
-          <a href="" data-target="mobile-demo" class="black-text sidenav-trigger"><i class="material-icons">menu</i></a>
+          <a href="/saved-articles" class="brand-logo pink-text"><img class="logo" src="./images/surge_logo.png"></a>
+          <a href="" data-target="mobile-demo" class="pink-text sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a class="black-text nav-home" href="/">Home</a></li>
-            <li><a class="black-text nav-saved" href="/saved-articles">Saved Articles</a></li>
+            <li><a class="nav-home" href="/">Home</a></li>
+            <li><a class="nav-saved" href="/saved-articles">Saved Articles</a></li>
           </ul>
         </div>
       </div>
@@ -23,7 +23,7 @@
 
   <header>
     <div class="row">
-      <div class="col s12 bc-image  center-align">
+      <div class="col s12 bc-image  center-align"> 
         <div class="title">
           <h1>THE SURGE</h1>
         </div>
