--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@ body {
 
 /* INDEX */
 .index .nav-home {
-    text-decoration: underline solid black;
+    text-decoration: underline solid #e91e63;
     font-size: 15px;
 }
 
@@ -17,12 +17,12 @@ body {
     height: 50px;
 }
 
-.index .bc-image {
+/* .index .bc-image {
+    background-image: linear-gradient(to right, rgb(25, 24, 32) , rgb(31, 19, 25));
     background-image: url("../images/verge_wp.jpg");
-    /* background-position: right; */
     z-index: -1;
-    width: 100%;
-}
+    height: 100%;
+} */
 
 .index .title h1 {
     font-family: 'Alfa Slab One', cursive;
