--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,14 @@
 <div class="index">
   {{!-- Nav --}}
   <div class="navbar-fixed">
-    <nav class="white">
+    <nav class="black">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo black-text"><img class="logo" src="./images/surge_logo.png"></a>
-          <a href="" data-target="mobile-demo" class="black-text sidenav-trigger"><i class="material-icons">menu</i></a>
+          <a href="/" class="brand-logo pink-text"><img class="logo" src="./images/surge_logo.png"></a>
+          <a href="" data-target="mobile-demo" class="pink-text sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a class="black-text nav-home" href="/">Home</a></li>
-            <li><a class="black-text nav-saved" href="/saved-articles">Saved Articles</a></li>
+            <li><a class="pink-text nav-home" href="/">Home</a></li>
+            <li><a class="pink-text nav-saved" href="/saved-articles">Saved Articles</a></li>
           </ul>
         </div>
       </div>
