--- a/views/saved-articles.handlebars
+++ b/views/saved-articles.handlebars
@@ -7,8 +7,8 @@
           <a href="/saved-articles" class="brand-logo pink-text"><img class="logo" src="./images/surge_logo.png"></a>
           <a href="" data-target="mobile-demo" class="pink-text sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a class="nav-home" href="/">Home</a></li>
-            <li><a class="nav-saved" href="/saved-articles">Saved Articles</a></li>
+            <li><a class="pink-text nav-home" href="/">Home</a></li>
+            <li><a class="pink-text nav-saved" href="/saved-articles">Saved Articles</a></li>
           </ul>
         </div>
       </div>
